5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1712_2507.log
== SUBMITION (2019-05-15 08:11:09) 
-- CODE:
qt=int(input("pirarucu:"))
pc=float(input("crescimento:"))
v=int(input("vendas:"))

c=0

while(qt<8000 and qt>0):
	v=int(input("vendas:"))
	qt=qt+((qt*pc)/100)- v
	c=c+1
	
if(qt>=8000):
	print("MAXIMO")
else(qt<=0)	:
	print("ZERO")
print(c)	
	

	
-- EXECUTION TIME:
0.201241
-- ERROR:
  File "/home/codebench/codes/1712/2507/main.py", line 14
    else(qt<=0)	:
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:11:11) 
-- CODE:
qt=int(input("pirarucu:"))
pc=float(input("crescimento:"))
v=int(input("vendas:"))

c=0

while(qt<8000 and qt>0):
	v=int(input("vendas:"))
	qt=qt+((qt*pc)/100)- v
	c=c+1
	
if(qt>=8000):
	print("MAXIMO")
else(qt<=0)	:
	print("ZERO")
print(c)	
	

	
-- ERROR:
File "XXXX", line 14
    else(qt<=0)	:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 08:11:24) 
-- CODE:
qt=int(input("pirarucu:"))
pc=float(input("crescimento:"))
v=int(input("vendas:"))

c=0

while(qt<8000 and qt>0):
	v=int(input("vendas:"))
	qt=qt+((qt*pc)/100)- v
	c=c+1
	
if(qt>=8000):
	print("MAXIMO")
else(qt<=0):
	print("ZERO")
print(c)	
	

	
-- EXECUTION TIME:
0.162572
-- ERROR:
  File "/home/codebench/codes/1712/2507/main.py", line 14
    else(qt<=0):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:11:26) 
-- CODE:
qt=int(input("pirarucu:"))
pc=float(input("crescimento:"))
v=int(input("vendas:"))

c=0

while(qt<8000 and qt>0):
	v=int(input("vendas:"))
	qt=qt+((qt*pc)/100)- v
	c=c+1
	
if(qt>=8000):
	print("MAXIMO")
else(qt<=0):
	print("ZERO")
print(c)	
	

	
-- ERROR:
File "XXXX", line 14
    else(qt<=0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 08:11:46) 
-- CODE:
qt=int(input("pirarucu:"))
pc=float(input("crescimento:"))
v=int(input("vendas:"))

c=0

while(qt<8000 and qt>0):
	v=int(input("vendas:"))
	qt=qt+((qt*pc)/100)- v
	c=c+1
	
if(qt>=8000):
	print("MAXIMO")
elif(qt<=0):
	print("ZERO")
print(c)	
	

	
-- EXECUTION TIME:
0.163194
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 8, in <module>
    v=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:11:48) 
-- CODE:
qt=int(input("pirarucu:"))
pc=float(input("crescimento:"))
v=int(input("vendas:"))

c=0

while(qt<8000 and qt>0):
	v=int(input("vendas:"))
	qt=qt+((qt*pc)/100)- v
	c=c+1
	
if(qt>=8000):
	print("MAXIMO")
elif(qt<=0):
	print("ZERO")
print(c)	
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 08:12:48) 
-- CODE:
qt=int(input("pirarucu:"))
pc=float(input("crescimento:"))
v=int(input("vendas:"))

c=0

while(qt<8000 and qt>0):
	v = int(input("vendas:"))
	qt=qt+((qt*pc)/100)- v
	c=c+1
	
if(qt>=8000):
	print("MAXIMO")
elif(qt<=0):
	print("ZERO")
print(c)	
	

	
-- EXECUTION TIME:
0.14076
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 8, in <module>
    v = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:12:49) 
-- CODE:
qt=int(input("pirarucu:"))
pc=float(input("crescimento:"))
v=int(input("vendas:"))

c=0

while(qt<8000 and qt>0):
	v = int(input("vendas:"))
	qt=qt+((qt*pc)/100)- v
	c=c+1
	
if(qt>=8000):
	print("MAXIMO")
elif(qt<=0):
	print("ZERO")
print(c)	
	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 08:13:22) 
-- CODE:
qt=int(input("pirarucu:"))
pc=float(input("crescimento:"))
v=int(input("vendas:"))

c=0

while(qt<8000 and qt>0):
	v = int(input("vendas:"))
	qt=qt+((qt*pc)/100)- v
	c=c+1
	
if(qt>=8000):
	print("MAXIMO")
elif(qt<=0):
	print("ZERO")
print(c)	
	

	
-- EXECUTION TIME:
0.152687
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 8, in <module>
    v = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 08:14:08) 
-- CODE:
qt=int(input("pirarucu:"))
pc=float(input("crescimento:"))


c=0

while(qt < 8000 and qt > 0):
	v = int(input("vendas:"))
	qt = qt+((qt*pc)/100)- v
	c = c + 1
	 
if(qt>=8000):
	print("MAXIMO")
elif(qt<=0):
	print("ZERO")
print(c)	
	

	
-- EXECUTION TIME:
0.143297
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
